[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "nonoise"
version = "0.1.0"
description = "A passive-first reconnaissance tool focused on signal, not noise"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Sh4d0w", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "urllib3>=2.0.0",
]

[project.scripts]
nonoise = "nonoise.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/nonoise"
Issues = "https://github.com/yourusername/nonoise/issues"
