[metadata]
name = nonoise
version = 0.1.0
description = A passive-first reconnaissance tool focused on signal, not noise
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/nonoise
author = Sh4d0w
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.8
install_requires =
    requests>=2.31.0
    aiohttp>=3.9.0
    urllib3>=2.0.0

[options.entry_points]
console_scripts =
    nonoise = nonoise.cli:main

[options.package_data]
* = wordlists/*.txt
